Created index.html page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <title>Snoddys Blog!</title>
     <meta charset="utf-8">
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
-      <h1> Hello Hello Hello</h1>
-   </div>
+    <div class="hello">
+      <h1>Snoddys Blog</h1>
+       </div>
+
+<div class="welcome">
+  <p>Hey everyone! Welcome to my foundations blog site, you will find all my blog links below:</p>
+</div>
+
+
+      <div class="row1">
+        <div class="col-tech1">
+          <a href="Blogs/sprint1-technical.html" style="color:red">Sprint 1 Technical Blog</a>
+        </div>
+        <div class="col-tech2">
+          <a href="Blogs/sprint2-technical.html" style="color:red">Sprint 2 Technical Blog</a>
+        </div>
+        <div class="col-tech3">
+          <a href="Blogs/sprint3-technical.html" style="color:red">Sprint 3 Technical Blog</a>
+        </div>
+      </div>
+      <hr 3>
+      
+      <div class="row1">
+        <div class="col-core1">
+          <a href="Blogs/sprint1-Core.html" style="color:red">Sprint 1 Cultural Blog</a>
+        </div>
+        <div class="col-core2">
+          <a href="Blogs/sprint2-Core.html" style="color:red">Sprint 2 Cultural Blog</a>
+        </div>
+        <div class="col-core3">
+          <a href="Blogs/sprint3-Core.html" style="color:red">Sprint 3 Cultural Blog</a>
+        </div>
+      </div>
+
   </body>
 </html>
