Added pages and content for sprint 2 blogs

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
 
       <div class="row1">
         <div class="col-tech1">
-          <a href="Blogs/sprint1-technical.html" style="color:red">Sprint 1 Technical Blog</a>
+          <a href="Blogs/sprint1-technical.html" style="color:azure">Sprint 1 Technical Blog</a>
         </div>
         <div class="col-tech2">
-          <a href="Blogs/sprint2-technical.html" style="color:red">Sprint 2 Technical Blog</a>
+          <a href="Blogs/sprint2-technical.html" style="color:azure">Sprint 2 Technical Blog</a>
         </div>
         <div class="col-tech3">
-          <a href="Blogs/sprint3-technical.html" style="color:red">Sprint 3 Technical Blog</a>
+          <a href="Blogs/sprint3-technical.html" style="color:azure">Sprint 3 Technical Blog</a>
         </div>
       </div>
-      <hr 3>
+      <hr>
       
       <div class="row1">
         <div class="col-core1">
-          <a href="Blogs/sprint1-Core.html" style="color:red">Sprint 1 Cultural Blog</a>
+          <a href="Blogs/sprint1-Core.html" style="color:azure">Sprint 1 Cultural Blog</a>
         </div>
         <div class="col-core2">
-          <a href="Blogs/sprint2-Core.html" style="color:red">Sprint 2 Cultural Blog</a>
+          <a href="Blogs/sprint2-Core.html" style="color:azure">Sprint 2 Cultural Blog</a>
         </div>
         <div class="col-core3">
-          <a href="Blogs/sprint3-Core.html" style="color:red">Sprint 3 Cultural Blog</a>
+          <a href="Blogs/sprint3-Core.html" style="color:azure">Sprint 3 Cultural Blog</a>
         </div>
       </div>
 
