Attempting to link blog pages correctly

--- a/Blogs/sprint1-Core.html
+++ b/Blogs/sprint1-Core.html
@@ -39,9 +39,9 @@
   </p>
 
 
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/index.html" style="color: black;">Home</a>
+  <a href="jack-snodgrass.github.io/index.html" style="color: black;">Home</a>
   <br>
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint1-technical.html" style="color: black;">Sprint 1 Technical Blog</a>
+  <a href="sprint1-technical.html" style="color: black;">Sprint 1 Technical Blog</a>
   <br>
   <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint2-technical.html" style="color: black;">Sprint 2 Technical Blog</a>
   <br>
