--- a/Blogs/sprint1-Core.html
+++ b/Blogs/sprint1-Core.html
@@ -39,7 +39,7 @@
   </p>
 
 
-  <a href="../index.html" style="color: black;">Home</a>
+  <a href="../../jack-snodgrass.github.io/index.html" style="color: black;">Home</a>
   <br>
   <a href="sprint1-technical.html" style="color: black;">Sprint 1 Technical Blog</a>
   <br>
