Added content and styling for sprint 3 blogs

--- a/Blogs/sprint1-technical.html
+++ b/Blogs/sprint1-technical.html
@@ -21,16 +21,7 @@
       While Te Houtaewa was filling his baskets with kumara he was spotted stealing the kai (food). He was immediately recognised.
     </p>
 
-    <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/index.html" style="color: black;">Home</a>
-  <br>
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint2-technical.html" style="color: black;">Sprint 2 Technical Blog</a>
-  <br>
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint1-core.html" style="color: black;">Sprint 1 Core</a>
-  <br>
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint2-core.html" style="color: black;">Sprint 2 core</a>
-   </body>
-    
-    <!-- this is a comment. -->
+    <a href="../index.html" class="home">Home</a>
   
   </body>
 </html>
