--- a/Blogs/sprint2-technical.html
+++ b/Blogs/sprint2-technical.html
@@ -3,13 +3,16 @@
   <head>
     <title>Sprint 2 Tech </title>
     <meta charset="UTF-8">
-    <link href="main.css" rel="style"> 
+    <link href="../tech2.css" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   </head>
   
   <body>
-    <h1 class="values">ID vs Class CSS: Understanding the Differences</h1>
+
+    <div class="styles">
+    <h1>ID vs Class CSS: Understanding the Differences</h1>
 
     <p>When using css to style the way your html will look we use selectors to target certain elements or a whole range of elements on the web page. Once we have selected the element a certain style, or even a set of styles can be applied to that element. 
 
@@ -20,7 +23,9 @@
     <p>
       IDs are the selector that developers will use to select and style a <strong>Single</strong> element on their webpage. Each web page can only have one element with a single ID attribute, and so the ID selector can never be used to style more than one element. IDs are indented by using the hashtag symbol followed by the name you are assigning. 
    </p>
-   
+  </div> 
+   <br>
+  <div class="classes">
    <h3>Class:</h3>
    <p>
     Class is the selector that developers will use to select and style as many element that they want and that they apply the class tag too. As I have explained above , IDs are unique and can only be applied to one element on a webpage, so this is where the difference is. Classes can be assigned and use to style multiple elements. If you use a class to define a style this style will be applied to any and all elements that share that class name. Classes are indented by using a dot followed by the name of the class. 
@@ -28,14 +33,9 @@
 
  <h4>So in short, IDs are unique and can be applied to one element and Class is not unique and can be applied to multiple elements.</h4>
 
- <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/index.html" style="color: black;">Home</a>
-  <br>
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint1-technical.html" style="color: black;">Sprint 1 Technical Blog</a>
-  <br>
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint1-core.html" style="color: black;">Sprint 1 Core</a>
-  <br>
-  <a href="file:///Users/jacksnodgrass/Desktop/Dev-Academy-Repos/jack-snodgrass.github.io/Blogs/sprint2-core.html" style="color: black;">Sprint 2 core</a>
-    
-    
+</div>
+ <a href="../index.html" class="home">Home</a>    
+
+
    </body>
 </html>
