--- a/Blogs/sprint3-Core.html
+++ b/Blogs/sprint3-Core.html
@@ -3,25 +3,56 @@
   <head>
     <title>Stories and Legends (PAGE title) </title>
     <meta charset="UTF-8">
-    <link href="styles/main.css" rel="stylesheet" type="text/css" />
-  </head>
+    <link href="../core3.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+ </head>
   
   <body>
-    <h1>The Story of Te Houtaewa (PAGE heading)</h1>
-    <h2>E kore e mau i a koe, he wae kai pakiaka. <em>A foot accustomed to running over roots makes the speediest runner.</em> (Optional SUB title) </h2>
-    <h3>10 November 2010</h3>
     
-    <p>
-      Te Houtaewa was the fastest runner of his day and played many pranks on his peoples enemies. One morning his mother wanted kumara for the hangi (earth oven) and asked Te Houtaewa to go to the gardens at Te Kao, a short distance away. He agreed to fetch the kumara and told his mother to prepare the hangi.
-    </p>
-    <p>
-      Instead of going to the nearby gardens, Te Houtaewa set off for Ahipara as he wanted to annoy some Te Rarawa people who lived there. Carrying two large baskets for the kumara, he ran like the wind, completing the journey over the hard sands of Te Oneroa a Tohe (Ninety Mile Beach) in the few hours it takes a good hangi to heat up properly. On reaching Ahipara, he went straight to the people's kumara pataka (storehouse for the sweet potatoes) situated at the foot of the hill Whangatauatia.
-    </p>
-    <p>
-      While Te Houtaewa was filling his baskets with kumara he was spotted stealing the kai (food). He was immediately recognised.
-    </p>
+    <div class="whatIs">
+    <h1>EQ / EI - Emotional Intelligence</h1>
     
-    <!-- this is a comment. -->
+    <h2>What is EQ?</h2>
+    <p>
+      We define emotional intelligence as the ability to Recognise , understand and manage our own emotions whilst being able to recognise, understand and influence the emotions of those around you. Basically the skill of being aware of how our emotions influence and drive our behavioural traits. 
+   </p>
+  <p>
+  After taking a quick EQ test I can se that I have an above average EQ at the starting point here but  have some serious room for growth in some areas. My test results show that I have I high EQ when it comes to dealing with others, and being able to interpret others feelings and how my actions will impact on them. But, this shows that my own emotions and thoughts can be a big roadblock and that how I handle pressured situations needs to be worked on. 
+</p>
+<p>
+  It has been proven that emotions trump thoughts. So the ability to stay calm and collected under pressure and not letting your emotions cloud your judgement is a huge skill to have, and one that I need to work on. 
+</p>
+</div>
+
+<div class="list">
+  <h3>Emotional intelligence can be be broken down into these sectors: </h3>
+  <ul>
+    <li>Self-Awareness</li>
+    <li>Self-Regulation</li>
+    <li>Motivation</li>
+    <li>Empathy</li>
+    <li>Social Skills</li>
+  </ul>
+</div>
   
-  </body>
+  <div class="myEQ">
+    <p>
+      For points 1, 4 and 5 I feel like I’m well equipped and adaptable in these situations and skills. I have struggled with number 2 as after identifying my emotions and thoughts I’ve found it hard to get them inline and to a point where I can do my best work and at the maximum output level. I often get up in my own head and become self deprecating when I think I’m failing or not at a high enough standard of work. And motivation is something that I need lots and lots of work on. I often find it hard to self motivate for personal reasons ie making something that I’m proud of and makes me feel like I’ve accomplished something. Most of the time when I’ve put my best work out is because there have been external rewards like praise and money, I really want to get to a place where I’m doing things for myself and push myself to be the best I can for me and not because I think it needs to be done to please others. 
+   </p>
+   <p>
+    The difference between IQ and EQ is that your IQ is just a standardised test use to measure what they believe your base intelligence rate is. This measures what your supposed intelligence is and relates to how well you can learn new things, pass tests and assignments etc without taking into account any emotions or feelings, so in short your base intelligence.
+    Where as your EQ is the ability to understand yours and the people around youse emotions and thoughts and the ability to use that knowledge to drive the behavioural traits that we use everyday.
+   </p>
+   <p>
+    This is important to know the difference as I’m sure most people, including myself, before learning what EQ is would place your IQ and ability to actually learn and complete work at the highest regard and the most important thing that employers look for in a candidate. But through this research Ive learnt that’s not the case at all, which was very surprising and new information to me. Research shows that EQ is worth up to 80% of how well we can manage ourselves and work to the best of our ability . IQ can help us resolve issues or make calculations as to how we would approach and complete the work , but your EQ takes it once step further and allows us to be more openly creative as it is touching on your emotions and thoughts as well, and not just your standard ability to attack something. 
+  </p>
+  <p>
+    I believe that EQ is more important by a landline then IQ as it expands on what your base intelligence is and allows us to really dissect and understand the problems we are having not only with the work we are doing, but with how this work is affecting our mentality. Also once you have reach adolescence its rare, if not non existent, that our IQs will change, whereas our EQ can be developed and increased over time and has no limit to what you can achieve. 
+</p>
+  </div>
+  
+  <div class="home">
+    <a href="../index.html">Home</a>
+  </div>
+</body>
 </html>
