--- a/Blogs/sprint3-technical.html
+++ b/Blogs/sprint3-technical.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stories and Legends (PAGE title) </title>
+    <title>Sprint 3 core </title>
     <meta charset="UTF-8">
-    <link href="styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="../tech3.css" rel="stylesheet" />
   </head>
   
   <body>
-    <h1>The Story of Te Houtaewa (PAGE heading)</h1>
-    <h2>E kore e mau i a koe, he wae kai pakiaka. <em>A foot accustomed to running over roots makes the speediest runner.</em> (Optional SUB title) </h2>
-    <h3>10 November 2010</h3>
-    
+    <h1>What Is The Differences Between HTML and CSS?</h1>
     <p>
-      Te Houtaewa was the fastest runner of his day and played many pranks on his peoples enemies. One morning his mother wanted kumara for the hangi (earth oven) and asked Te Houtaewa to go to the gardens at Te Kao, a short distance away. He agreed to fetch the kumara and told his mother to prepare the hangi.
+      HTML and CSS are both programming languages that are used in the creation of webpages and are also used in web application. However, they are totally different in application, use of features, ease, and they way they are structured. HTML can exist on its own to create a basic webpage, but CSS does not share this feature, it will need a HTML document to be linked to for it to serve a purpose. 
     </p>
     <p>
-      Instead of going to the nearby gardens, Te Houtaewa set off for Ahipara as he wanted to annoy some Te Rarawa people who lived there. Carrying two large baskets for the kumara, he ran like the wind, completing the journey over the hard sands of Te Oneroa a Tohe (Ninety Mile Beach) in the few hours it takes a good hangi to heat up properly. On reaching Ahipara, he went straight to the people's kumara pataka (storehouse for the sweet potatoes) situated at the foot of the hill Whangatauatia.
-    </p>
-    <p>
-      While Te Houtaewa was filling his baskets with kumara he was spotted stealing the kai (food). He was immediately recognised.
-    </p>
-    
-    <!-- this is a comment. -->
+      HTML is used to create all the content that will populate the web page. The HTML will contain words and sentences that are enclosed in tags and elements, the words written combined with tags and elements then appear on web pages. This makes it so your browser can identify things just as headings & paragraphs and can tell where they start and end. HTML can be though of as the structure of your house, after building it all the walls doors and windows are in but its all blank and boring. This where CSS comes ..
+   </p>
+   <p>
+    The CSS is what makes the HTML all pretty and adds some flare to your webpage. This is by using what is known as a “stylesheet” and is linked to the HTML in the <head> section of the HTML. It controls the design and style of a site and incorporates background colour, visual effects, and layout. CSS contains declarations that are found in between curly brackets and consist of property and value separated by colons. Think of CSS like the paint, artwork, furniture or anything else that would be used to decorate your house.
+  </p>
   
-  </body>
-</html>
+  <h1>What Is Control Flow and Looping?</h1>
+  <h3>What is control flow?</h3>
+  
+</body>
+</html
