added content to html for sprint 4 technical blog

--- a/Blogs/sprint4-technical.html
+++ b/Blogs/sprint4-technical.html
@@ -3,48 +3,50 @@
   <head>
     <title>Sprint 4 cultural</title>
     <meta charset="UTF-8">
-    <link href="../tech3.css" rel="stylesheet" />
+    <link href="../core1.css" rel="stylesheet" />
   </head>
 
     <body>
 
-        <h1>What is neuroplascity???</h1>
+        <h1>The Easy issue:</h1>
         <p>
-            Have you ever heard the term brain plasticity? Is this the scientific term for our brains being made of plastic? Surely they can’t be the 
-            same material as a water bottle Right? Well that is not what I’m saying here at all. This is the term we use to describe how through all of our 
-            different experiences and feelings the effect that it can have on the human brain. When we learn new things or take time to fully memorise a 
-            certain skill or technique actual functional changes happen in our brains pathways that can be long lasting. This is called neuroplascity. 
+            I was very blocked at the midway point in the fizzbuzz challenge. I went straight into writing my code without really looking at the challenge 
+            or what the tests were. My new code kept causing the old ones to fail and was getting confusing.
+ 
         </p>
+        <h3>The methods I used to get through it:</h3>
         <p>
-            Neuroplascity is very important and can be super beneficial to everyone as it allows us to rewire and repair our brains to always be learning 
-            and growing as people. It is at the base of all our human experiences and I think it is crucial to understand this and know how to improve your own 
-            brain health with this practice. I don’t have the best memory in the world, you could almost call it terrible to be honest, so I want to use this idea 
-            to try and get this part of my brain firing. I think repetition and constant practice will help with this especially in the sense of programming where 
-            we will be using the same skill sets for different challenges and needing to tap into that [art of the brain. 
+            I went back and copied and pasted what I had already out down into a different document and then fully erased the code on repl to start from scratch. 
+            I then used pseudo code while reading over the tests scripts to write out the steps of what I actually needed to complete to pass them. Then using google 
+            and a lot of forums form places like stackoverflow to either ask questions or look over existing ones where people have had other problems similar to mine. 
+            I was then able to break it down into smaller steps and complete it.
         </p>
+        <h3>How did you feel throughout the process?</h3>
         <p>
-            After reading through this <a url="(https://thriveglobal.com/stories/how-to-improve-your-neuroplasticity">article</a> I realised the two biggest ways 
-            ill incorporate this idea, and have been slacking, is to get enough quality sleep and find a strong purpose and some motivation for what I am trying to learn. 
-            Getting enough sleep allows the brains pathways to reset and prepare for the next days activities while strengthening the existing ones. And finding a purpose 
-            makes your brain more active and alert so you will approach the tasks at hand with more intent and focus which has been proven to enhance a persons neuroplascity. 
+            I started off confused and frustrated for sure but after writing the pseudo code and actually observing not just the error logs but the tests code themselves 
+            it was easy to stay calm and break down the challenge and attack it one step at a time. It really made me feel confident about solving problems due to the share 
+            amount fo resources that are our there for use to use to find answers we might need for any problems we face.
         </p>
         <br>
-        <h1>What is growth mindset?</h1>
+        <h1>The elegant way:</h1>
         <p>
-            When talking about a persons mindset it relates to how we our beliefs and how perceive our base intelligence and ability to learn and complete tasks and 
-            challenges set forward to us. When trying to put a term to it two categories and ways of viewing a persons mindset come into play,  <strong>Fixed</strong> and <strong>Growth</strong> A person
-             with a fixed mindset believes that their traits and skills, as well as their intelligence, is at a fixed rate and can’t change over time, leading them to become 
-             very self deprecating and harsh on themselves when dealing with challenges and failure believing they don’t have what it takes. Where as a person with a growth 
-             mindset views their personalities and traits as being able to be developed and grown over time and with their experiences. When people believe they can become 
-             smarter and expand their intelligence realise that their effort has a direct effect on wha they can achieve so they will take a harder approach which ultimately 
-             leads to higher achievement. 
+            When doing the final Kata challenge I found it difficult from the get go when facing things such as mapping that I was completely unfamiliar with and wasn’t 
+            getting it to work even after going at it for a few hours.
         </p>
+        <h3>The methods I used to get through it:</h3>
         <p>
-            Carol Dweck who did the initial research into growth mindset believes that is an important skill to have if you want to be successful in life. Some of the points 
-            she makes up really caught my attention and made me realise I have had a very fixed mindset over the last few years and my approach to a lot of things needs work. 
-            Acknowledging and embracing your weaknesses and being able to work on them and tackle them head on. And another big one is to prioritise learning over seeking 
-            approval. To often in the past I’ve been worried about how people view me or the work I’m doing without focusing on how I feel about it. I think switching focus to
-             thus will help me put out more work that I’m proud of and happy to call my own. 
+            Google!Google!Google! I read so many articles and forums over google before even attempting to come back into it. Once I thought I understood a little better 
+            I wrote out pseudo code to a greater extent then in the previous challenges to break it down. I then used the rubber ducky method as I went along to make sure 
+            I could explain what I was doing and to not move onto the next challenge until I could. I found that I could explain it a lot better than previously. It may have 
+            caused me to spend a little more time on it then I had wanted but it was worth it because by vocalising it using the rubber ducky I could feel myself getting more 
+            confident and starting to put things together in my head. 
+        </p>
+
+        <h2>What did I learn:</h2>
+        <p>
+            The biggest things I learned through these two problems was how helpful pseudo code can be to visualise what you need to do better, and that breaking the parent 
+            problem into smaller children issues using this method makes it a lot easier to see where you are getting confused or blocked. After finishing I went back to the 
+            “getting micro” section of the pre foundation curriculum and took some good notes down that will help with this also.
         </p>
 
         <a href="../index.html" class="home">Home</a>
