added links to sprint 4 blogs into index file

--- a/index.html
+++ b/index.html
@@ -19,28 +19,41 @@
 
       <div class="row1">
         <div class="col-tech1">
-          <a href="Blogs/sprint1-technical.html" style="color:azure">Sprint 1 Technical Blog</a>
+          <a href="Blogs/sprint1-technical.html" style="color:rgb(0, 0, 0)">Sprint 1 Technical Blog</a>
         </div>
         <div class="col-tech2">
-          <a href="Blogs/sprint2-technical.html" style="color:azure">Sprint 2 Technical Blog</a>
+          <a href="Blogs/sprint2-technical.html" style="color:rgb(0, 0, 0)">Sprint 2 Technical Blog</a>
         </div>
         <div class="col-tech3">
-          <a href="Blogs/sprint3-technical.html" style="color:azure">Sprint 3 Technical Blog</a>
+          <a href="Blogs/sprint3-technical.html" style="color:rgb(0, 0, 0)">Sprint 3 Technical Blog</a>
+        </div>
+        <div class="col-tech5">
+          <a href="Blogs/sprint4-technical.html" style="color:rgb(0, 0, 0)">Sprint 4 Technical Blog</a>
+        </div>
+        <div class="col-tech6">
+          <a href="Blogs/sprint5-technical.html" style="color:rgb(0, 0, 0)">Sprint 5 Technical Blog</a>
         </div>
       </div>
-      <hr>
+      
       
       <div class="row1">
-        <div class="col-core1">
-          <a href="Blogs/sprint1-Core.html" style="color:azure">Sprint 1 Cultural Blog</a>
+        <div class="col-tech1">
+          <a href="Blogs/sprint1-Core.html" style="color:rgb(0, 0, 0)">Sprint 1 Cultural Blog</a>
         </div>
-        <div class="col-core2">
-          <a href="Blogs/sprint2-Core.html" style="color:azure">Sprint 2 Cultural Blog</a>
+        <div class="col-tech1">
+          <a href="Blogs/sprint2-Core.html" style="color:rgb(0, 0, 0)">Sprint 2 Cultural Blog</a>
         </div>
-        <div class="col-core3">
-          <a href="Blogs/sprint3-Core.html" style="color:azure">Sprint 3 Cultural Blog</a>
+        <div class="col-tech1">
+          <a href="Blogs/sprint3-Core.html" style="color:rgb(0, 0, 0)">Sprint 3 Cultural Blog</a>
+        </div>
+        <div class="col-tech1">
+          <a href="Blogs/sprint4-Core.html" style="color:rgb(0, 0, 0)">Sprint 4 Cultural Blog</a>
+        </div>
+        <div class="col-tech1">
+          <a href="Blogs/sprint5-Core.html" style="color:rgb(0, 0, 0)">Sprint 5 Cultural Blog</a>
         </div>
       </div>
+
 
   </body>
 </html>
