--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="Blogs/sprint3-Core.html" style="color:rgb(0, 0, 0)">Sprint 3 Cultural Blog</a>
         </div>
         <div class="col-tech1">
-          <a href="Blogs/sprint4-Core.html" style="color:rgb(0, 0, 0)">Sprint 4 Cultural Blog</a>
+          <a href="Blogs/sprint4-core.html" style="color:rgb(0, 0, 0)">Sprint 4 Cultural Blog</a>
         </div>
         <div class="col-tech1">
           <a href="Blogs/sprint5-Core.html" style="color:rgb(0, 0, 0)">Sprint 5 Cultural Blog</a>
