--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="Blogs/sprint4-technical.html" style="color:rgb(0, 0, 0)">Sprint 4 Technical Blog</a>
         </div>
         <div class="col-tech6">
-          <a href="Blogs/sprint5-technical.html" style="color:rgb(0, 0, 0)">Sprint 5 Technical Blog</a>
+          <a href="Blogs/sprint 5-tech.html" style="color:rgb(0, 0, 0)">Sprint 5 Technical Blog</a>
         </div>
       </div>
       
@@ -50,7 +50,7 @@
           <a href="Blogs/sprint4-core.html" style="color:rgb(0, 0, 0)">Sprint 4 Cultural Blog</a>
         </div>
         <div class="col-tech1">
-          <a href="Blogs/sprint5-Core.html" style="color:rgb(0, 0, 0)">Sprint 5 Cultural Blog</a>
+          <a href = "Blogs/sprint 5-tech.html" style="color:rgb(0, 0, 0)">Sprint 5 Cultural Blog</a>
         </div>
       </div>
 
