setting up tests

--- a/Blogs/sprint1-Core.html
+++ b/Blogs/sprint1-Core.html
@@ -46,7 +46,7 @@
 
 
 
-  <a href="../index.html" class="home">Home</a>
+  <a href="../index.html" class="home" data-testid="home">Home</a>
    
 </div>
 
