--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
       
       <div class="row1">
-        <div class="col-tech1">
+        <div class="col-tech1" data-testid="link">
           <a href="Blogs/sprint1-Core.html" style="color:rgb(0, 0, 0)">Sprint 1 Cultural Blog</a>
         </div>
         <div class="col-tech1">
